@@ -76,7 +76,7 @@ static int map_if_lk24(int sg_fd, const char * device_name, int rw,
 
 #define MAX_DEV_NAMES 256
 
-static char * version_str = "1.04 20090523 [svn: r116]";
+static char * version_str = "1.04 20090530 [svn: r118]";
 
 
 static struct option long_options[] = {
